--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,36 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+  orb-tools: circleci/orb-tools@9
+  cxflow: checkmarx-ts/cxflow@1.0.4
+
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  sast-scan:
     jobs:
-      - welcome/run
+      - cxflow/scan:
+          project: JayPTestSample
+          team: "\\CxServer\\SP\\Checkmarx\\JayN"
+          preset: "Checkmarx Express"
+          report-file: vulns.json
+          filters:
+            branches:
+              only:
+                - master
+
+#      - orb-tools/lint
+#      - orb-tools/pack:
+#          source-dir: src
+#          destination-orb-path: orb.yml
+#          workspace-path: orb.yml
+#          artifact-path: orb.yml
+#          requires: [orb-tools/lint]
+#      - orb-tools/publish-dev:
+#          orb-name: checkmarx-ts/cxflow
+#          requires: [orb-tools/pack]
+#      - orb-tools/publish:
+#          orb-ref: checkmarx-ts/cxflow@1.0.4
+#          attach-workspace: true
+#          requires: [orb-tools/publish-dev]
+#          filters:
+#            branches:
+#              only: Feature/combine-all-scanners-configuration
