--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,19 @@ orbs:
   orb-tools: circleci/orb-tools@9
   cxflow: checkmarx-ts/cxflow@1.0.4
 
-  jobs:
-    cx-scan:
-      executor: cxflow/default
-      steps:
-        - checkout
-        - cxflow/scan:
-            team: "\\CxServer\\SP\\Checkmarx\\JayN"
-            preset: "Checkmarx Express"
-            report-file: checkmarx.json
-        - store_artifacts:
-            path: checkmarx.json
-
   workflows:
     version: 2
     sast-scan:
       jobs:
-        - cx-scan:
+        - cxflow/scan:
+            project: CxProject
+            team: "\\CxServer\\SP\\Checkmarx\\JayN"
+            preset: "Checkmarx Express"
+            report-file: vulns.json
             filters:
               branches:
-                only: Feature/combine-all-scanners-configuration
+                only:
+                  - master
 
 
 #      - orb-tools/lint
