--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
   version: 2
   sast-scan:
     jobs:
-      - scan:
+      - cxflow/scan:
           project: CxProject
           team: "\\CxServer\\SP\\Checkmarx\\JayN"
           preset: "Checkmarx Express"
