changed scan and config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ workflows:
           team: "\\CxServer\\SP\\Checkmarx\\JayN"
           preset: "Checkmarx Express"
           report-file: vulns.json
+          checkmarx-url: "https://ast.dev.checkmarx-ts.com"
+          checkmarx-username: "jay.nanduri@checkmarx.com"
+          checkmarx-password: "aqNGC2?C7UKdfK_D"
 
 
 
