--- a/src/jobs/results.yml
+++ b/src/jobs/results.yml
@@ -54,6 +54,14 @@ parameters:
     type: string
     default: "cx.json"
     description: "Report filename"
+  checkmarx-username:
+    type: string
+    default: ""
+    description: "Enter the Checkmarx SAST Username"
+  checkmarx-password:
+    type: string
+    default: ""
+    description: "Enter the Checkmarx SAST Password"
 
 executor:
   name: default
@@ -70,6 +78,8 @@ steps:
       bug-tracker: << parameters.bug-tracker >>
       apply-filters: << parameters.apply-filters >>
       checkmarx-url: << parameters.checkmarx-url >>
+      checkmarx-username: << parameters.checkmarx-username >>
+      checkmarx-password: << parameters.checkmarx-password >>
       report-folder: << parameters.report-folder >>
       report-file: << parameters.report-file >>
       params: << parameters.params >>
