--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
   version: 2
   sast-scan:
     jobs:
+      - cxflow/files
       - cxflow/scan:
           project: CxProject
           team: "\\CxServer\\SP\\Checkmarx\\JayN"
