--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ workflows:
           preset: "Checkmarx Express"
           report-file: vulns.json
           scanners: sca
-          sca-url: https://sca.scacheckmarx.com
+          sca-appUrl: https://sca.scacheckmarx.com
+          sca-apiUrl: https://api.scacheckmarx.com
           sca-username: cxflow
           sca-tenant: SCA-Champions
           sca-password: Cxflow@123
