--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ workflows:
           scanners: sca
           sca-appUrl: https://sca.scacheckmarx.com
           sca-apiUrl: https://api.scacheckmarx.com
+          sca-accessControlUrl: https://platform.checkmarx.net
           sca-username: cxflow
           sca-tenant: SCA-Champions
           sca-password: Cxflow@123
