--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ workflows:
           sca-apiUrl: https://api.scacheckmarx.com
           sca-accessControlUrl: https://platform.checkmarx.net
           ast-apiUrl: http://ec2-3-249-214-110.eu-west-1.compute.amazonaws.com
+          ast-preset: "Checkmarx Default"
 
 
 #      - orb-tools/lint
