cxgo configuration enabled

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
           team: "\\Demo\\CxFlow"
           preset: "Checkmarx Express"
           report-file: vulns.json
-          scanners: cxgo
+          scanners: sast,sca
           sca-appUrl: https://sca.scacheckmarx.com
           sca-apiUrl: https://api.scacheckmarx.com
           sca-accessControlUrl: https://platform.checkmarx.net
