--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ workflows:
           team: "\\CxServer\\SP\\Checkmarx\\JayN"
           preset: "Checkmarx Express"
           report-file: vulns.json
-          scanners: sast,sca
+          scanners: ast
           sca-appUrl: https://sca.scacheckmarx.com
           sca-apiUrl: https://api.scacheckmarx.com
           sca-accessControlUrl: https://platform.checkmarx.net
-          ast-apiUrl: http://ec2-3-249-214-110.eu-west-1.compute.amazonaws.com
+          ast-apiUrl: http://cx-ast-testing.dev.checkmarx-ts.com/
           ast-preset: "Checkmarx Default"
           ast-incremental: false
           cxgo-base-url: https://api.checkmarx.net
